# LeopardGecko

./: .gitignore  2020-04-09_final_4_volumes_combined_VolAvg_k256_s128.h5  2020-04-09_final_4_volumes_combined_vols.txt  2020-05-15_final_4_volumes_combined_VolAvg_k256_s128.h5  AnalyseAvgPoolResults.ipynb  AvgPooling3DConsistencyData.ipynb  GenerateReportAndAutoPointsOfInterest.ipynb  LICENSE  README.md  leopardgecko.py  lg-genpredcsreport-debug.ipynb  lg-genpredcsreport.ipynb  lg-genpredcsreport.py  pyproject.toml  setup.py  test.py  test_SorensenDiceCalculation3DPool.ipynb  testcreatevolumesfile.py
.ipynb_checkpoints/: AnalyseAvgPoolResults-checkpoint.ipynb  AvgPooling3DConsistencyData-checkpoint.ipynb
leopardgecko/: AvgPool.py  ConsistencyScore.py  Pcrit.py  PredictedData.py  ScoreData.py  __init__.py  hvect_plot_2class.py  hvect_plot_3class.py  hvectstatstools.py  lg-genpredcsreport.ipynb  lg-genpredcsreport.py  metrics.py  segmentor.py  utils.py
scripts/: AnalyseAvgPoolResults.ipynb  AvgPooling3DConsistencyData.ipynb  GenerateReportAndAutoPointsOfInterest.ipynb  PyTorchTests.ipynb  developing_consistency_score.ipynb  developing_hvectstatstools.ipynb  developing_hvectstatstools2.ipynb  developing_segmentor_class.ipynb  developing_segmentor_class.py  developing_segmentor_class_pred.py  example_lgsegmentor_3class_predict.ipynb  example_lgsegmentor_3class_predict_block.ipynb  example_lgsegmentor_3class_predict_withCS.ipynb  example_lgsegmentor_3class_predict_withCS_withVS.ipynb  example_lgsegmentor_3class_predict_withCS_withVS_with.ipynb  example_utils_block_map.ipynb  (+7 more)
(+18 files in other folders)
